2002-10-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* sodipodi.spec.in: Update to cleaner version by Dag Vieers

	* src/sp-text.c (sp_text_is_empty): New method
	(sp_string_release): Use ::release, not ::destroy
	(sp_tspan_release): Ditto
	(sp_text_release): Ditto

	* src/text-context.c (sp_text_context_selection_changed): Forget text
	(sp_text_context_forget_text): New method, remove empty text item

	* src/sp-text.c (sp_tspan_build): Ensure there is always text child

	* src/sp-item-group.c (sp_group_bbox): Do not set bbox to 0,0,0,0

	* src/select-context.c (sp_select_context_root_handler): Set grabbed to NULL on release

	* src/path-chemistry.c (sp_selected_path_combine): Use item2root transform
	(sp_selected_path_break_apart): Ditto

	* src/sp-item.c (sp_item_i2root_affine): New method

	* src/widgets/gradient-position.c (sp_gradient_position_motion_notify): Reset
	gradient relative transform to symmetric rectilinear if dragging

	* src/style.c (sp_style_merge_ipaint): Use "release" signal
	(sp_style_read_ipaint): Ditto

	* src/sp-pattern.c (sp_pattern_read_attr): Use "release" signal

	* src/sp-item.c (sp_item_read_attr): Use "release" signal

	* src/sp-image.c (autotrace_dialog): Connect "release" instead of "destroy"

	* src/sp-gradient.c (sp_gradient_href_release): Use "release" instead of "destroy"

2002-10-06  suzuki toshiya <mpsuzuki@hiroshima-u.ac.jp>

	* src/libnr/Makefile.am (libnr_a_SOURCES): added
	nr-gradient.h. (nr-gradient.c appeared twice.)
        
2002-10-04  Masatake YAMATO  <jet@gyve.org>

	* src/widgets/font-selector.c: Inlucded stdlib.h for atof.

2002-10-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-gradient.c (nr_rgradient_renderer_setup): Use different base renderers
	(nr_rgradient_render_block_symmetric): Split frontend
	(nr_rgradient_render_block_optimized): Ditto
	(nr_rgradient_render_generic_optimized): Asymmetric renderer

	* src/sp-object.c (sp_object_invoke_release): new frontend