@@ -1,5 +1,7 @@
 2002-10-06  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/toolbox.c (sp_toolbox_draw_create): Do not expand/fill use correct name for text
+
 	* sodipodi.spec.in: Update to cleaner version by Dag Vieers
 
 	* src/sp-text.c (sp_text_is_empty): New method
